--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
     "@rails/webpacker": "^3.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.19.1",
     "webpack-dev-server": "^3.1.0"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:hachall/com_ark.git",
+  "author": "Hamish Hall <hachall@hotmail.com>",
+  "license": "MIT"
 }
